--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+
+**/saves
+
+
+# ------------------------------------------------------------
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
